--- a/index.html
+++ b/index.html
@@ -7,15 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>hello Nikita</h1>
     <div id="root">
         <h1>Harsha is here!</h1>
     </div>
 
-<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
-
-<script src="script.js"></script>
+<script type="module" src="script.js"></script>
 </body>
 </html>
